added the culture property in settings file

--- a/sources/VeloCity.Wpf.Bootstrapper/appsettings.json
+++ b/sources/VeloCity.Wpf.Bootstrapper/appsettings.json
@@ -1,4 +1,8 @@
 {
+    // The culture used to format the dates and numbers.
+    // Default value: current os culture
+    "Culture": "en-ZA",
+
     // Controls the level of details for a displayed error.
     // Possible values: Verbose, Simple
     // Default value: Simple
