#132 - refactoring - created the data access port

--- a/sources/VeloCity.Ports.DataAccess/VeloCity.Ports.DataAccess.csproj
+++ b/sources/VeloCity.Ports.DataAccess/VeloCity.Ports.DataAccess.csproj
@@ -20,24 +20,33 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-        <AssemblyName>DustInTheWind.VeloCity.Wpf.Application</AssemblyName>
-        <RootNamespace>DustInTheWind.VeloCity.Wpf.Application</RootNamespace>
+        <AssemblyName>DustInTheWind.VeloCity.DataAccessPort</AssemblyName>
+        <RootNamespace>DustInTheWind.VeloCity.DataAccessPort</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Remove="PresentSprintMemberDetails\**" />
-      <EmbeddedResource Remove="PresentSprintMemberDetails\**" />
-      <None Remove="PresentSprintMemberDetails\**" />
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>DustInTheWind.VeloCity.Tests</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="MediatR" Version="10.0.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\VeloCity.Ports.DataAccess\VeloCity.Ports.DataAccess.csproj" PrivateAssets="All" />
       <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" PrivateAssets="All" />
-      <ProjectReference Include="..\VeloCity.Wpf.Infrastructure\VeloCity.Infrastructure.csproj" PrivateAssets="All" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Compile Update="Resources.Designer.cs">
+            <DependentUpon>Resources.resx</DependentUpon>
+            <DesignTime>True</DesignTime>
+            <AutoGen>True</AutoGen>
+        </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+        <EmbeddedResource Update="Resources.resx">
+            <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+            <Generator>ResXFileCodeGenerator</Generator>
+        </EmbeddedResource>
     </ItemGroup>
 
 </Project>
