--- a/sources/VeloCity.DataAccess.JsonFiles/VeloCity.DataAccess.JsonFiles.csproj
+++ b/sources/VeloCity.DataAccess.JsonFiles/VeloCity.DataAccess.JsonFiles.csproj
@@ -29,6 +29,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\VeloCity.Ports.DataAccess\VeloCity.Ports.DataAccess.csproj" PrivateAssets="All" />
       <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" PrivateAssets="All" />
     </ItemGroup>
 
