#133 - created add/remove vacation buttons (without implementation)

--- a/sources/VeloCity.Wpf.Presentation.CustomControls/VeloCity.Wpf.Presentation.CustomControls.csproj
+++ b/sources/VeloCity.Wpf.Presentation.CustomControls/VeloCity.Wpf.Presentation.CustomControls.csproj
@@ -25,4 +25,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <RootNamespace>DustInTheWind.VeloCity.Wpf.Presentation.CustomControls</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\VeloCity.ChartTools\VeloCity.ChartTools.csproj" PrivateAssets="All" />
+    </ItemGroup>
+
 </Project>
