small adjustments to the titles of the popup

--- a/sources/VeloCity.Wpf.Bootstrapper/appsettings.json
+++ b/sources/VeloCity.Wpf.Bootstrapper/appsettings.json
@@ -1,7 +1,7 @@
 {
     // The culture used to format the dates and numbers.
     // Default value: current os culture
-    "Culture": "en-ZA",
+    "Culture": "en-GB",
 
     // Controls the level of details for a displayed error.
     // Possible values: Verbose, Simple
