#105 - refactored the user access port and adapter

--- a/sources/VeloCity.Wpf.Presentation/VeloCity.Wpf.Presentation.csproj
+++ b/sources/VeloCity.Wpf.Presentation/VeloCity.Wpf.Presentation.csproj
@@ -26,6 +26,25 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="Converters\**" />
+      <Compile Remove="SprintsArea\CloseSprintConfirmation\**" />
+      <Compile Remove="SprintsArea\NewSprintConfirmation\**" />
+      <Compile Remove="SprintsArea\StartSprintConfirmation\**" />
+      <EmbeddedResource Remove="Converters\**" />
+      <EmbeddedResource Remove="SprintsArea\CloseSprintConfirmation\**" />
+      <EmbeddedResource Remove="SprintsArea\NewSprintConfirmation\**" />
+      <EmbeddedResource Remove="SprintsArea\StartSprintConfirmation\**" />
+      <None Remove="Converters\**" />
+      <None Remove="SprintsArea\CloseSprintConfirmation\**" />
+      <None Remove="SprintsArea\NewSprintConfirmation\**" />
+      <None Remove="SprintsArea\StartSprintConfirmation\**" />
+      <Page Remove="Converters\**" />
+      <Page Remove="SprintsArea\CloseSprintConfirmation\**" />
+      <Page Remove="SprintsArea\NewSprintConfirmation\**" />
+      <Page Remove="SprintsArea\StartSprintConfirmation\**" />
+    </ItemGroup>
+
+    <ItemGroup>
       <Page Remove="SprintsArea\SprintCalendar\AbsenceDetailsControl.xaml" />
     </ItemGroup>
 
@@ -49,9 +68,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Compile Update="ChartsArea\VelocityChart\VelocityChartControl.xaml.cs">
           <SubType>Code</SubType>
         </Compile>
-        <Compile Update="SprintsArea\CloseSprintConfirmation\SprintCloseConfirmationWindow.xaml.cs">
-            <SubType>Code</SubType>
-        </Compile>
     </ItemGroup>
 
     <ItemGroup>
@@ -64,10 +80,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
           <SubType>Designer</SubType>
         </Page>
         <Page Update="MainArea\Main\MainWindow.xaml">
-            <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-            <SubType>Designer</SubType>
-        </Page>
-        <Page Update="SprintsArea\CloseSprintConfirmation\SprintCloseConfirmationWindow.xaml">
             <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
             <SubType>Designer</SubType>
         </Page>
