added unit tests for some usecases.

--- a/sources/VeloCity.Wpf.Application/VeloCity.Wpf.Application.csproj
+++ b/sources/VeloCity.Wpf.Application/VeloCity.Wpf.Application.csproj
@@ -43,4 +43,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
       <ProjectReference Include="..\VeloCity.Wpf.Infrastructure\VeloCity.Infrastructure.csproj" PrivateAssets="All" />
     </ItemGroup>
 
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>DustInTheWind.VeloCity.Tests</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
 </Project>
