--- a/sources/VeloCity.Tests.Unit.Cli/VeloCity.Tests.Unit.Cli.csproj
+++ b/sources/VeloCity.Tests.Unit.Cli/VeloCity.Tests.Unit.Cli.csproj
@@ -43,10 +43,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\VeloCity.Cli.Application\VeloCity.Cli.Application.csproj" />
-      <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" />
-      <ProjectReference Include="..\VeloCity.Ports.DataAccess\VeloCity.Ports.DataAccess.csproj" />
-      <ProjectReference Include="..\VeloCity.Ports.SystemAccess\VeloCity.Ports.SystemAccess.csproj" />
+      <ProjectReference Include="..\VeloCity.Cli.Application\VeloCity.Cli.Application.csproj" PrivateAssets="All" />
+      <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" PrivateAssets="All" />
+      <ProjectReference Include="..\VeloCity.Ports.DataAccess\VeloCity.Ports.DataAccess.csproj" PrivateAssets="All" />
+      <ProjectReference Include="..\VeloCity.Ports.SystemAccess\VeloCity.Ports.SystemAccess.csproj" PrivateAssets="All" />
     </ItemGroup>
 
 </Project>
