--- a/sources/VeloCity.DataAccess.JsonFiles/VeloCity.DataAccess.JsonFiles.csproj
+++ b/sources/VeloCity.DataAccess.JsonFiles/VeloCity.DataAccess.JsonFiles.csproj
@@ -34,4 +34,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" PrivateAssets="All" />
     </ItemGroup>
 
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>DustInTheWind.VeloCity.Tests.Integration</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
 </Project>
