--- a/sources/VeloCity.Tests.Integration/VeloCity.Tests.Integration.csproj
+++ b/sources/VeloCity.Tests.Integration/VeloCity.Tests.Integration.csproj
@@ -62,13 +62,85 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
       <None Update="TestData\DataAccess.JsonFiles\JsonDatabaseFileTests\03-one-sprint.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="TestData\DataAccess\SprintRepositoryTests\db-empty.json">
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-add.empty.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="TestData\DataAccess\SprintRepositoryTests\db-update.json">
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-is-any-in-progress.empty.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="TestData\DataAccess\SprintRepositoryTests\db-retrieve.json">
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-last.empty.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-last-in-progress.empty.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-last-in-progress.last.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-last-in-progress.none.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-last-in-progress.not-last.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-is-any-in-progress.none.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-is-any-in-progress.not-last.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-is-first-new-sprint.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-by-number.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-all.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-last.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-is-any-in-progress.last.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-date-interval-for.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-closed-sprints-before.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-last-closed.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-add.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-between-dates.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-by-date.two.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-by-date.one.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-by-date.empty.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get.empty.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-all.empty.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-all.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
