--- a/sources/VeloCity.Tests.Integration/VeloCity.Tests.Integration.csproj
+++ b/sources/VeloCity.Tests.Integration/VeloCity.Tests.Integration.csproj
@@ -62,6 +62,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
       <None Update="TestData\DataAccess.JsonFiles\JsonDatabaseFileTests\03-one-sprint.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="TestData\DataAccess\OfficialHolidayRepositoryTests\db-get-all.two.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\OfficialHolidayRepositoryTests\db-get-all.one.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\OfficialHolidayRepositoryTests\db-get-all.empty.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
       <None Update="TestData\DataAccess\SprintRepositoryTests\db-add.empty.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
@@ -120,6 +129,27 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="TestData\DataAccess\SprintRepositoryTests\db-get-between-dates.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-find.empty.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-find.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-by-date-interval.no-employment.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-by-date.no-employment.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-by-date-interval.two.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-by-date-interval.one.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-by-date-interval.empty.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="TestData\DataAccess\TeamMemberRepositoryTests\db-get-by-date.two.json">
